@@ -1,4 +1,15 @@
-$Id: CHANGES,v 1.54 2000/03/11 15:34:54 stelian Exp $
+$Id: CHANGES,v 1.55 2000/05/28 16:24:13 stelian Exp $
+
+Changes between versions 0.4b16 and 0.4b17 (released ??????????????)
+====================================================================
+
+1.	The -F script is called now *only* at the end of a tape,
+	not at the end of the dump. Thanks to Chris
+	<haul@informatik.tu-darmstadt.de> for the bug report.
+
+2.	Use posix signal handling to preserve dump functionality 
+	with libc5. Thanks to Jeff Johnson <jbj@redhat.com> for
+	the patch.
 
 Changes between versions 0.4b15 and 0.4b16 (released March 11, 2000)
 ====================================================================
